# NLP_AGH

./: .env.example  .gitignore  .gitmodules  README.md  callbacks.py  config.py  config_lstm.py  download_data.py  predict.py  process.py  pyproject.toml  tokenizer_evaluation.ipynb  train.py  train_lstm.py  train_transformer.py
lstm/: lstm.py
src/nlp_agh/training/: common.py  transformer.py
src/nlp_agh/transformer/: attention.py  positional_encoding.py  transformer.py
training/: common.py  lstm.py  transformer.py
transformer/: attention.py  dataset.py  scheduler.py  transformer.py
